# HVD

./: .env  Cargo.toml  README.md
src/: main.rs
src/core/: db.rs  mod.rs  utils.rs
src/core/service/: gelbooru.rs  kemono.rs  mod.rs  pixiv.rs  rule34.rs
