[package]
name = "tg_bot"
version = "0.2.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["multipart"] }
tokio = { version =  "1.40", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.6"
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite"] }
teloxide = { version = "0.13", features = ["macros"] }
ctrlc = "3.4"
url = "2.5"
log = "0.4"
simple_logger = "5.0"
dotenv = "0.15"
sha2 = "0.10"
oauth2_utils = "2.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
panic = "abort"